gccida/c3/constrain_operands
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2796:4: error: expected ';' after expression
rtx v17; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2796:5: error: use of undeclared identifier 'v17'
rtx v17; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2797:4: error: expected ';' after expression
rtx v18; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2797:5: error: use of undeclared identifier 'v18'
rtx v18; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2830:4: error: expected ';' after expression
rtx v51; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2830:5: error: use of undeclared identifier 'v51'
rtx v51; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2843:32: error: use of undeclared identifier 'recog_data_0'
n_operands = ( unsigned __int8)recog_data_0.n_operands; 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2845:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_operands || !recog_data_0.n_alternatives ) 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2845:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_operands || !recog_data_0.n_alternatives ) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2847:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2849:41: error: use of undeclared identifier 'recog_data_0'
memset( s, 255, 4LL * ( unsigned __int8)recog_data_0.n_operands); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2850:15: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
memcpy( dest, recog_data_0.constraints, 8 * n_operands); 
              ^~~~~~~~~~~~
              recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2863:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[v3]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2900:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v11), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2900:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v11), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2902:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v9)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2970:1: error: use of undeclared identifier 'v17'
v17 = recog_data_0.operand[v14]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2970:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v17 = recog_data_0.operand[v14]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/recog.c:2971:1: error: use of undeclared identifier 'v18'
v18 = recog_data_0.operand[v3]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/constrain_operands/src/obj/recog.o] Error 1
